[package]
name = "gbemu"
version = "0.1.0"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[dependencies]
bytemuck = { version ="1", features=["derive", "min_const_generics", "extern_crate_alloc"]}
bitfrob = "1"
beryllium = "0.13.0"
pixel_formats = "0.1.5"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
opt-level = 3
